# prompt-chaining

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BENCHMARKS.md  BENEFITS_SUMMARY.md  BUGFIX_IMPLEMENTATION.md  BUGFIX_REPORT.md  BUGFIX_SUMMARY.md  CHANGELOG.md  CHECKPOINTING_STRATEGY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_VALIDATION.md  CONTRIBUTING.md  Dockerfile  JWT_AUTHENTICATION.md  LANGCHAIN_FALLBACK_STRATEGY.md  LICENSE.md  MIGRATION_README.md  PHASE_2_INTEGRATION_TEST_REPORT.md  PROMPT-CHAINING.md  PROMPT_CHAINING.md  PROMPT_UPDATE_GUIDE.md  README.md  STRUCTURED_OUTPUTS_AVAILABILITY.md  STRUCTURED_OUTPUTS_INDEX.md  STRUCTURED_OUTPUTS_MIGRATION_PLAN.md  console_client.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
scripts/: benchmark_chain.py  dev.sh  docker-test.sh  format.sh  generate_jwt.py  test.sh
src/orchestrator_worker/: __init__.py  main.py
src/workflow/: __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  test_prompt_examples.py
tests/integration/: DELIVERABLES_CHECKLIST.md  TESTING_GUIDE.md  TEST_REPORT_STRUCTURED_OUTPUTS.md  __init__.py  docker_log_helper.py  test_agent_request_id_propagation.py  test_auth_endpoints.py  test_chain_full.py  test_chain_full_endpoint.py  test_chain_graph_endpoint.py  test_chain_live_endpoint.py  test_chain_steps.py  test_chat_completions_request_id.py  test_docker_api_endpoints.py  test_docker_build_validation.py  test_docker_circuit_breaker.py  test_docker_runtime.py  test_full_pipeline.py  test_logging.py  test_logging_docker.py  test_logging_enhancements.py  test_middleware_request_context.py  test_rate_limit_integration.py  test_request_size_validation.py  test_security_headers_integration.py  test_structured_output_improvements.py  test_timeout_live_server.py  test_trace_correlation.py
tests/manual/: docker_manual_tests.md
tests/performance/: __init__.py  conftest.py  test_chain_benchmarks.py
tests/unit/: test_circuit_breaker.py  test_synthesizer.py  (+8 more)
(+77 files in other folders)
